Visibility scale fixes #25 #8

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     --uv-5: rgba(255, 38, 0, 0.5);
 
     --distance: 0%;
+    --scale-bg: rgba(98, 216, 255, 0.509);
 }
 
 html {
@@ -259,33 +260,36 @@ span.inline-icon {
     margin-top: -0.3em;
 }
 .visibility .visibility-graph {
-    background-color: var(--moon);
+    background-color: var(--scale-bg);
     background-image: url(imgs/graph.svg);
     background-position: right 0 bottom 0px;
     border: 1px solid var(--bg-md);
     height: 2em;
-    width: 100%;
+    width: calc(100% + 2.5em);
     position: relative;
     overflow: hidden;
-    border-radius: 20px;
     font-size: 0.6em;
+    transition: 0.5s ease;
+    margin-bottom: -0.9em;
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.visibility .visibility-graph::before,
+.visibility .visibility-graph::after {
+    position: absolute;
+    bottom: 0.5em;
+    z-index: 1;
 }
 
 .visibility .visibility-graph::before {
-    content: '0';
-    position: absolute;
-    bottom: 0.4em;
+    content: '0 |';
     left: 0.6em;
-    z-index: 1;
 }
 
 .visibility .visibility-graph::after {
-    content: '50km/31mi';
-    position: absolute;
-    bottom: 0.4em;
+    content: '| 5km/3.11mi';
     right: 1em;
-    z-index: 1;
-    transition: 0.5s ease;
 }
 
 .visibility .visibility-graph .distance {
@@ -294,6 +298,7 @@ span.inline-icon {
         var(--bg-dk) calc(var(--distance) - 10px),
         transparent 0
     );
+    border-right: 90px solid var(--bg-dk);
     filter: blur(10px);
     background-repeat: no-repeat;
     overflow: hidden;
